<resources>
    <string name="app_name">LicoAndroid</string>
    <string name="Lico">Lico</string>
    <string name="submit">Santé !</string>
    <string name="highway">Highway</string>
    <string name="picolo">Picolo</string>
    <string name="sum">Bet Sum</string>
    <string name="selfdraw">Self Draw</string>
    <string name="useless">Bouton Inutile</string>
    <string name="fun">Dit à Lico comment tu veux te mettre la race !</string>
    <string name="credit">La Lico App est développée par la Lico Team :</string>
    <string name="Lisa">Lisa Anthonioz</string>
    <string name="Gauthier">Gauthier Le Bagousse</string>
    <string name="Lolo">Loona Rivière</string>
    <string name="Titou">Titouan Sola</string>
    <string name="Canaab">Abonnez-vous à la chaîne de Canaab !</string>
    <string name="nbJoueur">Nombre de joueurs :</string>
    <string name="listeJoueur">Liste des joueurs :</string>
    <string name="left">&lt;</string>
    <string name="descHighway">Highway est un jeu de pari. On doit parier sur la hauteur d\'une carte, en fonction de la précédente. Le joueur doit swipper la carte vers le haut s\'il pense qu\'elle est plus grande, ou vers le bas dans le cas contraire. Dès lors qu\'il se trompe, il doit boire autant de gorgées que de cartes trouvées. Si le joueur dévoile toutes les cartes, il distribue les 6 gorgées aux autres joueurs.</string>
    <string name="descPicolo">Le picolo est un jeu de défi. Les joueurs doivent exécuter ce que l\'application leur demande. Pour passer les défis, on doit simplement cliquer sur l\'écran.</string>
    <string name="descBetSum">Bet Sum est un jeu de pari sur une somme de chiffre. Pour valider, le joueur doit faire un simple appui sur l\'écran. Lorsque tout le monde a choisi un chiffre, ils parient sur la somme de tous les chiffres. Finalement, le joueur qui est le plus loin du compte boit.</string>
    <string name="descDrawSelf">Chaque joueur prend un selfie depuis l\'application, dessine dessus, puis l\'enregistre. À la fin, chaque selfie est affiché, et chaque joueur vote au tour à tour pour le plus amusant. Finalement, le joueur ayant reçu le plus de vote doit boire (et comme c\'est un jeu plutôt long, cul sec !)</string>
</resources>
