<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="fr.isen.lico.menuLicoActivity">

    <ImageView
        android:id="@+id/ivLicorne"
        android:layout_width="wrap_content"
        android:layout_height="400px"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/licorne" />

    <ImageView
        android:id="@+id/ivHighway"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        app:layout_constraintEnd_toStartOf="@+id/ivPicolo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/highway" />

    <ImageView
        android:id="@+id/ivPicolo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivHighway"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/piccolo" />

    <ImageView
        android:id="@+id/ivBetsum"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="308dp"
        app:layout_constraintEnd_toStartOf="@+id/ivSelfdraw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/somme" />

    <ImageView
        android:id="@+id/ivSelfdraw"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="308dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBetsum"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo" />

    <TextView
        android:id="@+id/tvHighway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/highway"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivBetsum"
        app:layout_constraintEnd_toStartOf="@+id/tvPicolo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHighway"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvPicolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:text="@string/picolo"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivSelfdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvHighway"
        app:layout_constraintTop_toBottomOf="@+id/ivPicolo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvBetSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/sum"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvSelfDraw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBetsum" />

    <TextView
        android:id="@+id/tvSelfDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selfdraw"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvBetSum"
        app:layout_constraintTop_toBottomOf="@+id/ivSelfdraw" />

    <TextView
        android:id="@+id/tvFun"
        android:layout_width="207dp"
        android:layout_height="47dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/fun"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/preference" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
